--- a/homex-api/pom.xml
+++ b/homex-api/pom.xml
@@ -83,7 +83,7 @@
 				<version>1.5.11.RELEASE</version>
 				<configuration><!-- 指定该Main Class为全局的唯一入口 -->
 					<classifier>exec</classifier>
-					<mainClass>homex.AlipayApplication</mainClass>
+					<mainClass>homex.HomexApplication</mainClass>
 					<layout>ZIP</layout>
 				</configuration>
 				<executions>
